feat: update research Ben

--- a/notebooks/research_ben.ipynb
+++ b/notebooks/research_ben.ipynb
@@ -3390,31 +3390,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "columns_to_keep = [\n",
     "    \"code\",\n",
     "    \"url\",\n",
+    "    \"last_modified_datetime\",\n",
     "    \"product_name\",\n",
-    "    \"quantity\",\n",
     "    \"packaging\",\n",
     "    \"packaging_en\",\n",
     "    \"categories\",\n",
     "    \"categories_tags\",\n",
     "    \"labels_en\",\n",
-    "    \"ingredients_text\",\n",
     "    \"ingredients_tags\",\n",
     "    \"ingredients_analysis_tags\",\n",
     "    \"allergens\",\n",
     "    \"additives_tags\",\n",
     "    \"traces_tags\",\n",
-    "    \"nutriscore_score\",\n",
-    "    \"ecoscore_score\",\n",
+    "    \"nutriscore_grade\",\n",
+    "    \"ecoscore_grade\",\n",
+    "    \"nutrient_levels_tags\",\n",
     "    \"image_url\",\n",
     "    \"image_small_url\",\n",
-    "    \"energy-kcal_100g\",\n",
     "    \"energy_100g\",\n",
     "    \"fat_100g\",\n",
     "    \"saturated-fat_100g\",\n",
@@ -3422,7 +3421,6 @@
     "    \"sugars_100g\",\n",
     "    \"proteins_100g\",\n",
     "    \"salt_100g\",\n",
-    "    \"sodium_100g\",\n",
     "    \"fruits-vegetables-nuts-estimate-from-ingredients_100g\",\n",
     "]\n",
     "data_en_filtered = data_en_filtered[columns_to_keep]"
