feat: research ben

--- a/notebooks/research_ben.ipynb
+++ b/notebooks/research_ben.ipynb
@@ -3488,7 +3488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3497,7 +3497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3678,7 +3678,7 @@
        "1                                              22.666667  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3689,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3735,7 +3735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12849,7 +12849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12858,7 +12858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -15420,7 +15420,7 @@
        "0                           False              True  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15431,7 +15431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15440,7 +15440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15505,7 +15505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15514,7 +15514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15523,7 +15523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15581,7 +15581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -15717,7 +15717,7 @@
        "62                  Velouté de 12 légumes"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15732,12 +15732,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>categories</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>unknown</td>\n",
+       "      <td>34935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Boissons</td>\n",
+       "      <td>1607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Surgelés</td>\n",
+       "      <td>1304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Snacks, Snacks sucrés, Confiseries, Bonbons</td>\n",
+       "      <td>1055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Snacks, Snacks sucrés, Cacao et dérivés, Chocolats, Chocolats noirs</td>\n",
+       "      <td>1048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Snacks, Snacks sucrés, Biscuits et gâteaux, Biscuits</td>\n",
+       "      <td>987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Viandes et dérivés, Viandes, Charcuteries, Jambons, Jambons blancs</td>\n",
+       "      <td>941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Boissons, Boissons avec sucre ajouté</td>\n",
+       "      <td>873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Snacks, Snacks salés, Amuse-gueules, Biscuits apéritifs</td>\n",
+       "      <td>682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Snacks, Snacks sucrés, Cacao et dérivés, Chocolats, Chocolats au lait</td>\n",
+       "      <td>510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Viandes et dérivés, Viandes, Poulet et dérivés, Volailles, Poulets, Filets de poulet</td>\n",
+       "      <td>498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Snacks, Snacks sucrés, Cacao et dérivés, Confiseries, Confiseries chocolatées, Bonbons de chocolat</td>\n",
+       "      <td>487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Snacks, Snacks sucrés, Biscuits et gâteaux, Biscuits, Biscuits au chocolat</td>\n",
+       "      <td>480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Aliments et boissons à base de végétaux, Aliments d'origine végétale, Matières grasses, Matières grasses végétales, Produits de l'olivier, Huiles, Huiles d'olive, Huiles d'olive vierges extra, Huiles d'olive vierges</td>\n",
+       "      <td>474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Petit-déjeuners, Produits à tartiner, Produits à tartiner sucrés, Pâtes à tartiner, Pâtes à tartiner aux noisettes, Pâtes à tartiner au chocolat, Pâtes à tartiner aux noisettes et au cacao</td>\n",
+       "      <td>441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Compléments alimentaires</td>\n",
+       "      <td>421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Snacks, Snacks sucrés, Confiseries, Bonbons, Bonbons gélifiés</td>\n",
+       "      <td>421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Matières grasses</td>\n",
+       "      <td>395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Snacks, Snacks sucrés, Biscuits et gâteaux, Biscuits, Biscuits sablés</td>\n",
+       "      <td>382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Poissons et viandes et oeufs, Foies gras, Foies gras de canard, Foies gras entiers, Foies gras de canard entiers</td>\n",
+       "      <td>376</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                 categories  \\\n",
+       "0                                                                                                                                                                                                                   unknown   \n",
+       "1                                                                                                                                                                                                                  Boissons   \n",
+       "2                                                                                                                                                                                                                  Surgelés   \n",
+       "3                                                                                                                                                                               Snacks, Snacks sucrés, Confiseries, Bonbons   \n",
+       "4                                                                                                                                                       Snacks, Snacks sucrés, Cacao et dérivés, Chocolats, Chocolats noirs   \n",
+       "5                                                                                                                                                                      Snacks, Snacks sucrés, Biscuits et gâteaux, Biscuits   \n",
+       "6                                                                                                                                                        Viandes et dérivés, Viandes, Charcuteries, Jambons, Jambons blancs   \n",
+       "7                                                                                                                                                                                      Boissons, Boissons avec sucre ajouté   \n",
+       "8                                                                                                                                                                   Snacks, Snacks salés, Amuse-gueules, Biscuits apéritifs   \n",
+       "9                                                                                                                                                     Snacks, Snacks sucrés, Cacao et dérivés, Chocolats, Chocolats au lait   \n",
+       "10                                                                                                                                     Viandes et dérivés, Viandes, Poulet et dérivés, Volailles, Poulets, Filets de poulet   \n",
+       "11                                                                                                                       Snacks, Snacks sucrés, Cacao et dérivés, Confiseries, Confiseries chocolatées, Bonbons de chocolat   \n",
+       "12                                                                                                                                               Snacks, Snacks sucrés, Biscuits et gâteaux, Biscuits, Biscuits au chocolat   \n",
+       "13  Aliments et boissons à base de végétaux, Aliments d'origine végétale, Matières grasses, Matières grasses végétales, Produits de l'olivier, Huiles, Huiles d'olive, Huiles d'olive vierges extra, Huiles d'olive vierges   \n",
+       "14                             Petit-déjeuners, Produits à tartiner, Produits à tartiner sucrés, Pâtes à tartiner, Pâtes à tartiner aux noisettes, Pâtes à tartiner au chocolat, Pâtes à tartiner aux noisettes et au cacao   \n",
+       "15                                                                                                                                                                                                 Compléments alimentaires   \n",
+       "16                                                                                                                                                            Snacks, Snacks sucrés, Confiseries, Bonbons, Bonbons gélifiés   \n",
+       "17                                                                                                                                                                                                         Matières grasses   \n",
+       "18                                                                                                                                                    Snacks, Snacks sucrés, Biscuits et gâteaux, Biscuits, Biscuits sablés   \n",
+       "19                                                                                                         Poissons et viandes et oeufs, Foies gras, Foies gras de canard, Foies gras entiers, Foies gras de canard entiers   \n",
+       "\n",
+       "    count  \n",
+       "0   34935  \n",
+       "1    1607  \n",
+       "2    1304  \n",
+       "3    1055  \n",
+       "4    1048  \n",
+       "5     987  \n",
+       "6     941  \n",
+       "7     873  \n",
+       "8     682  \n",
+       "9     510  \n",
+       "10    498  \n",
+       "11    487  \n",
+       "12    480  \n",
+       "13    474  \n",
+       "14    441  \n",
+       "15    421  \n",
+       "16    421  \n",
+       "17    395  \n",
+       "18    382  \n",
+       "19    376  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datatemp = data_en_filtered_clean[\"categories\"].value_counts().reset_index()\n",
-    "datatemp.head()"
+    "datatemp.head(20)"
    ]
   },
   {
