feat: update reseach ben

--- a/notebooks/research_ben.ipynb
+++ b/notebooks/research_ben.ipynb
@@ -3488,7 +3488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3735,7 +3735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3777,7 +3777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3798,7 +3798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15482,7 +15482,7 @@
     "    steps=[\n",
     "        (\"preprocessor\", preprocessor),\n",
     "        (\"pca\", PCA(n_components=50)),  # Optional: Reduce dimensionality before clustering\n",
-    "        (\"kmeans\", KMeans(n_clusters=5, random_state=42)),  # Set the number of clusters\n",
+    "        (\"kmeans\", KMeans(n_clusters=200, random_state=42)),  # Set the number of clusters\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -15505,7 +15505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15514,7 +15514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15581,7 +15581,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset_with_bool_ml[\"cluster\"].value_counts()\n",
+    "\n",
+    "dataset_with_bool[\"cluster\"] = dataset_with_bool_ml[\"cluster\"]\n",
+    "\n",
+    "# dataset_with_tfidf[\"cluster\"] = dataset_with_tfidf_ml[\"cluster\"]\n",
+    "\n",
+    "# dataset_with_tfidf[[\"product_name\"]][dataset_with_tfidf[\"cluster\"] == 1].head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -15610,129 +15625,416 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bio inulin</td>\n",
+       "      <th>2972</th>\n",
+       "      <td>Panna Cotta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Organic pea protein powder</td>\n",
+       "      <th>6847</th>\n",
+       "      <td>Tarte aux fraises</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Fondants Citron</td>\n",
+       "      <th>8415</th>\n",
+       "      <td>vanille breizh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Confiture de fraise mara des bois</td>\n",
+       "      <th>9368</th>\n",
+       "      <td>Adelis fri coco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Pan</td>\n",
+       "      <th>9371</th>\n",
+       "      <td>Sorbet Tamarin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Tisane nerf - sommeil</td>\n",
+       "      <th>14867</th>\n",
+       "      <td>Vanille &amp; fruits rouges</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>huile végétale</td>\n",
+       "      <th>15214</th>\n",
+       "      <td>Mochi 'z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>pot au feu de légumes aux aromates</td>\n",
+       "      <th>15479</th>\n",
+       "      <td>Glace NOUGAT de Montélimar Chabert &amp; Guillot</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>velouté de 10 légumes</td>\n",
+       "      <th>15480</th>\n",
+       "      <td>Glace RÉGLISSE Intense</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Velouté de légumes façon poêlée</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Potiron et vermicelles</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>Délice de potiron châtaigne</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>Lié big purSoup mouliné de 10 Légumes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>Soupe potiron et kiri</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>Velouté de légumes du soleil</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>Potiron et j’irai</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>velouté de tomates et pointe d'origan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>Velouté de 10 Légumes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>Velouté de tomates</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>Velouté de 12 légumes</td>\n",
+       "      <th>15481</th>\n",
+       "      <td>Glace RHUM RAISINS, raisins gloden macérés</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             product_name\n",
-       "0                              Bio inulin\n",
-       "7              Organic pea protein powder\n",
-       "11                        Fondants Citron\n",
-       "19      Confiture de fraise mara des bois\n",
-       "21                                    Pan\n",
-       "29                  Tisane nerf - sommeil\n",
-       "31                         huile végétale\n",
-       "41     pot au feu de légumes aux aromates\n",
-       "42                  velouté de 10 légumes\n",
-       "43        Velouté de légumes façon poêlée\n",
-       "45                 Potiron et vermicelles\n",
-       "50            Délice de potiron châtaigne\n",
-       "51  Lié big purSoup mouliné de 10 Légumes\n",
-       "52                  Soupe potiron et kiri\n",
-       "54           Velouté de légumes du soleil\n",
-       "55                      Potiron et j’irai\n",
-       "57  velouté de tomates et pointe d'origan\n",
-       "58                  Velouté de 10 Légumes\n",
-       "59                     Velouté de tomates\n",
-       "62                  Velouté de 12 légumes"
+       "                                       product_name\n",
+       "2972                                    Panna Cotta\n",
+       "6847                              Tarte aux fraises\n",
+       "8415                                 vanille breizh\n",
+       "9368                                Adelis fri coco\n",
+       "9371                                 Sorbet Tamarin\n",
+       "14867                       Vanille & fruits rouges\n",
+       "15214                                      Mochi 'z\n",
+       "15479  Glace NOUGAT de Montélimar Chabert & Guillot\n",
+       "15480                        Glace RÉGLISSE Intense\n",
+       "15481    Glace RHUM RAISINS, raisins gloden macérés"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_with_tfidf_ml[\"cluster\"].value_counts()\n",
-    "\n",
-    "dataset_with_tfidf[\"cluster\"] = dataset_with_tfidf_ml[\"cluster\"]\n",
-    "\n",
-    "dataset_with_tfidf[[\"product_name\"]][dataset_with_tfidf[\"cluster\"] == 1].head(20)"
+    "dataset_with_bool[[\"product_name\"]][dataset_with_bool[\"cluster\"] == 50].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>690</th>\n",
+       "      <td>Beef Jerky - Teriyaki</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>692</th>\n",
+       "      <td>Small Batch Original Handcrafted Beef Jerky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>Jack Link's Original Beef Jerky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>713</th>\n",
+       "      <td>British Crispy smoked Bacon Strips</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>Red chilli pepper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>867</th>\n",
+       "      <td>Prosciutto Di Parma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1463</th>\n",
+       "      <td>Spanish Serrano Ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1916</th>\n",
+       "      <td>Dry cured unsmokes back bacon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3817</th>\n",
+       "      <td>Jambon cuit superieur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3882</th>\n",
+       "      <td>Filet mignon orloff</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     product_name\n",
+       "690                         Beef Jerky - Teriyaki\n",
+       "692   Small Batch Original Handcrafted Beef Jerky\n",
+       "693               Jack Link's Original Beef Jerky\n",
+       "713            British Crispy smoked Bacon Strips\n",
+       "715                             Red chilli pepper\n",
+       "867                           Prosciutto Di Parma\n",
+       "1463                          Spanish Serrano Ham\n",
+       "1916                Dry cured unsmokes back bacon\n",
+       "3817                        Jambon cuit superieur\n",
+       "3882                          Filet mignon orloff"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_with_bool[['product_name']][dataset_with_bool[\"cluster\"] == 100].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1475</th>\n",
+       "      <td>Pork Chipolatas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>6 GERMAN SMOKED FRANKFURTERS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3659</th>\n",
+       "      <td>chipolatas Napoli à griller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3688</th>\n",
+       "      <td>choucroute au riesling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3855</th>\n",
+       "      <td>Saucisses de toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3901</th>\n",
+       "      <td>Merguez Véritables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930</th>\n",
+       "      <td>Saucisse blanche brassé</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4026</th>\n",
+       "      <td>Saucisses de Toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4202</th>\n",
+       "      <td>Saucisse de toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4450</th>\n",
+       "      <td>Terrine lapin noisette</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      product_name\n",
+       "1475               Pork Chipolatas\n",
+       "2447  6 GERMAN SMOKED FRANKFURTERS\n",
+       "3659   chipolatas Napoli à griller\n",
+       "3688        choucroute au riesling\n",
+       "3855         Saucisses de toulouse\n",
+       "3901            Merguez Véritables\n",
+       "3930       Saucisse blanche brassé\n",
+       "4026         Saucisses de Toulouse\n",
+       "4202          Saucisse de toulouse\n",
+       "4450        Terrine lapin noisette"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_with_bool[[\"product_name\"]][dataset_with_bool[\"cluster\"] == 25].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>Merguez de poulet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>Chipolatas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1475</th>\n",
+       "      <td>Pork Chipolatas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>6 GERMAN SMOKED FRANKFURTERS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3659</th>\n",
+       "      <td>chipolatas Napoli à griller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3810</th>\n",
+       "      <td>Roulade nature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3835</th>\n",
+       "      <td>Chipolata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3855</th>\n",
+       "      <td>Saucisses de toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3901</th>\n",
+       "      <td>Merguez Véritables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3930</th>\n",
+       "      <td>Saucisse blanche brassé</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3933</th>\n",
+       "      <td>Merguez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3942</th>\n",
+       "      <td>Chorizo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3982</th>\n",
+       "      <td>intermarché 46600 Martel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4026</th>\n",
+       "      <td>Saucisses de Toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4202</th>\n",
+       "      <td>Saucisse de toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4450</th>\n",
+       "      <td>Terrine lapin noisette</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4586</th>\n",
+       "      <td>Chipolata supérieur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4609</th>\n",
+       "      <td>Saucisse type Toulouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4668</th>\n",
+       "      <td>Pate croute richelieu canard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4694</th>\n",
+       "      <td>Roti de veau à la provencale</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      product_name\n",
+       "107              Merguez de poulet\n",
+       "153                     Chipolatas\n",
+       "1475               Pork Chipolatas\n",
+       "2447  6 GERMAN SMOKED FRANKFURTERS\n",
+       "3659   chipolatas Napoli à griller\n",
+       "3810                Roulade nature\n",
+       "3835                     Chipolata\n",
+       "3855         Saucisses de toulouse\n",
+       "3901            Merguez Véritables\n",
+       "3930       Saucisse blanche brassé\n",
+       "3933                       Merguez\n",
+       "3942                       Chorizo\n",
+       "3982      intermarché 46600 Martel\n",
+       "4026         Saucisses de Toulouse\n",
+       "4202          Saucisse de toulouse\n",
+       "4450        Terrine lapin noisette\n",
+       "4586           Chipolata supérieur\n",
+       "4609        Saucisse type Toulouse\n",
+       "4668  Pate croute richelieu canard\n",
+       "4694  Roti de veau à la provencale"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_en_filtered_clean[['product_name']][data_en_filtered_clean[\"cluster\"] == 50].head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15917,7 +16219,7 @@
     }
    ],
    "source": [
-    "datatemp = data_en_filtered_clean[\"categories\"].value_counts().reset_index()\n",
+    "datatemp = data_en_filtered_clean[\"cluster\"].value_counts().reset_index()\n",
     "datatemp.head(20)"
    ]
   },
@@ -15931,7 +16233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datalab_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -15945,7 +16247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
