--- a/notebooks/research_ben.ipynb
+++ b/notebooks/research_ben.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"../data/en.openfoodfacts.org.products.csv.gz\""
+    "file_path = \"../data/raw/en.openfoodfacts.org.products.csv.gz\""
    ]
   },
   {
@@ -16233,7 +16233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "datalab_env",
    "language": "python",
    "name": "python3"
   },
@@ -16247,7 +16247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
