--- a/notebooks/research_alex_add.ipynb
+++ b/notebooks/research_alex_add.ipynb
@@ -24039,7 +24039,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datalab_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -24053,7 +24053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
