--- a/notebooks/research_alex.ipynb
+++ b/notebooks/research_alex.ipynb
@@ -88030,7 +88030,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-gpu-env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -88044,7 +88044,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
